--- a/src/containers/homepage/homepage.css
+++ b/src/containers/homepage/homepage.css
@@ -4,10 +4,12 @@
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background-image: url("../../assets/img/bakcground.jpg");
-    background-size: cover;
     position: absolute;
     top:0;left:0;right:0;
+}
+
+.homePage {
+    background-size: cover;
 }
 
  @import url('https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap');
@@ -31,14 +33,13 @@
     top:10px;
     right:50px;
     font-weight: 600;
-    font-size: 15px;
+    font-size: 17px;
     color: white;
 
 }
 
 .homeMore {
-    font-family: cursive;
-    letter-spacing: -0.7px;
+    color: #F48F3A;
     font-weight: 700;
     margin: 15px;
 }
