--- a/src/containers/managestore/managestore.css
+++ b/src/containers/managestore/managestore.css
@@ -1,66 +1,63 @@
-.grid-container {
+.ManageStoreContainer {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
-    gap: 19px 19px;
+    gap: 30px 30px;
     grid-template-areas:  "Photo StoreInfo StoreInfo"
                           "Manage Manage Manage"
                           "Manage Manage Manage";
-    height: 96vh;
+    height: 95;
 }
 
 .Photo {
     grid-area: Photo;
-    background-image: url("https://www.irafina.gr/wp-content/uploads/2018/11/sklavenitis_spata_emporiko-750x430.jpg");
-    background-size: cover;
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 15px;
+    background-image:url("https://www.irafina.gr/wp-content/uploads/2018/11/sklavenitis_spata_emporiko-750x430.jpg");
+    background-size: cover;
+    border-radius: 10px;
 }
 
 .Time {
     background-color:rgba(255, 255, 255,0.95);
-    width:60%;
     border-radius: 15px;
+    width:70%;
+}
+
+.Time > h3 {
+    margin: 10px;
 }
 
 .StoreInfo {
     grid-area: StoreInfo;
     display: flex;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.2s;
     border-radius: 10px;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     text-align: center;
+    transition: 0.2s;
 }
+
 
 .Manage {
     grid-area: Manage;
 }
 
-.manage-container {
-  display: grid;
-  grid-template-columns: 0.9fr 1.3fr 0.8fr;
-  grid-template-rows: 0.4fr 1.3fr;
-  gap: 2px 15px;
-  grid-template-areas: "Announcement Graph People-Data"
-                       "Announcement Graph People-Data";
+.OperationsContainer {
+    display: grid;
+    grid-template-columns: 0.2fr 2.2fr 0.8fr;
+    grid-template-rows: 0.4fr 1.3fr;
+    gap: 2px 15px;
+    grid-template-areas: "Toolbar Graph People-Data"
+    "Toolbar Graph People-Data";
 }
 
-.Time {
-    height: 12vh;
-    grid-area: Time;
-    text-align: center;
- }
-
-.Announcement {
-    grid-area: Announcement;
-    height: 60.6vh;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.2s;
-    border-radius: 10px;
-    text-align: center;
-    background-color: #F48F3A;
+.Toolbar {
+    grid-area: Toolbar;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
 }
 
 .Graph {
@@ -68,25 +65,23 @@
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.2s;
     border-radius: 10px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    max-height: 59vh;
+}
+
+
+.GraphData {
+    font-size: 15px;
     text-align: center;
 }
 
-.img {
-    background-image: url("../../assets/img/graph.png");
-    background-size: cover;
-    height:60%;
-}
-
-.data {
-    margin-top: 30px;
-    font-size: 15px;
-}
-
-.peopleCounter {
+.PeopleCounter {
     font-size: 23px;
 }
 
-.People-Data {
+.PeopleData {
     grid-area: People-Data;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.2s;
@@ -96,19 +91,20 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    max-height: 59vh;
  }
 
-.buttonGroup {
+.ButtonGroup {
     display: flex;
     justify-content: space-around;
-    width: 90%;
+    width: 40%;
+    margin-bottom: 15px;
 }
 
-.customerButton {
+.CustomerButton {
     background-color: #373f51;
-    width: 30%;
-    height: 8vh;
-    margin: 12px;
+    width: 40px;
+    height: 40px;
     border-radius: 10px;
     display: flex;
     align-items: center;
@@ -121,6 +117,6 @@
     user-select: none;
 }
 
-.customerButton:hover {
+.CustomerButton:hover {
     cursor: pointer;
 }
