--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Poiret+One&display=swap');
 body {
-    font-family: 'Ubuntu', sans-serif;
+    font-family: 'Poiret One', cursive;
+}
+
+::-moz-selection { /* Code for Firefox */
+    background-color: #F48F3A;
+    color: black;
+}
+
+::selection {
+    background-color: #F48F3A;
+    color: black;
 }
