Submitted to euaropean hackathon

--- a/src/containers/managestore/managestore.css
+++ b/src/containers/managestore/managestore.css
@@ -14,7 +14,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image:url("https://www.irafina.gr/wp-content/uploads/2018/11/sklavenitis_spata_emporiko-750x430.jpg");
+    background-image:url("https://www.dailynews.com/wp-content/uploads/2019/11/LDN-L-AMAZON-GROCERY-1113-001-1.jpg");
     background-size: cover;
     border-radius: 10px;
 }
