--- a/src/containers/resultpage/resultpage.css
+++ b/src/containers/resultpage/resultpage.css
@@ -22,6 +22,7 @@
 .Info {
     grid-area: Info;
     margin:10px;
+    background-image: url("../../assets/img/store1.jpg");
 }
 
 .marketBasicInfo {
